syntax = "proto3";

package rivet.backend.cf;

import "legacy/proto/common.proto";

message CustomHostname {
    enum Status {
        PENDING = 0;
        ACTIVE = 1;
        FAILED = 2;
    }

    rivet.common.Uuid identifier = 1;
    rivet.common.Uuid namespace_id = 2;
    string hostname = 3;
    rivet.common.Uuid challenge = 4;
    int64 create_ts = 5;
    Status status = 6;
    rivet.common.Uuid subscription_id = 7;
}
